--- a/team-script/src/components/Navbar/styles.module.scss
+++ b/team-script/src/components/Navbar/styles.module.scss
@@ -1,3 +1,10 @@
 .navbar {
-    @apply flex justify-between items-center;
+  @apply flex justify-between items-center px-4 py-4 bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600;
+
+  .sign-in {
+    @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 transition ease-in-out duration-300;
+  }
+  a {
+    @apply py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 hover:text-blue-900 font-semibold transition ease-in duration-300 md:p-0 dark:text-white md:dark:text-blue-500;
+  }
 }
