--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -1,5 +1,5 @@
 .navbar {
-  @apply flex justify-between items-center px-4 py-4 bg-white dark:bg-gray-900 w-full z-20 start-0 border-b border-gray-200 dark:border-gray-600;
+  @apply flex justify-between items-center px-4 py-4 bg-gray-300 dark:bg-gray-900 w-full z-20 start-0 border-b border-gray-200 dark:border-gray-600;
 
   .sign-in {
     @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 transition ease-in-out duration-300;
