Feat: add video chat
-Implement p2p connection

--- a/src/components/VideoPlayer/styles.module.scss
+++ b/src/components/VideoPlayer/styles.module.scss
@@ -7,6 +7,6 @@
 
 
     video {
-        @apply min-w-9 min-h-11 border border-solid border-gray-300 rounded-3xl max-w-64 max-h-64 shadow-2xl;
+        @apply mx-auto min-w-9 min-h-11 border border-solid border-gray-300 rounded-3xl max-w-64 max-h-64 shadow-2xl;
     }
 }
