--- a/src/components/UsersVideos/styles.module.scss
+++ b/src/components/UsersVideos/styles.module.scss
@@ -1,3 +1,3 @@
 .users-videos {
-    @apply flex justify-between flex-col items-center h-16;
+    @apply flex justify-between flex-col items-center min-h-16 overflow-y-auto h-full;
 }
