--- a/src/components/UsersVideos/styles.module.scss
+++ b/src/components/UsersVideos/styles.module.scss
@@ -1,3 +1,3 @@
 .users-videos {
-    @apply flex justify-between flex-col items-center min-h-16 overflow-y-auto h-full;
+    @apply pt-4 flex justify-start gap-y-8 flex-col items-center max-h-[700px] overflow-x-hidden overflow-y-auto h-auto;
 }
