--- a/src/components/MonacoEditor/styles.module.scss
+++ b/src/components/MonacoEditor/styles.module.scss
@@ -1,5 +1,5 @@
 .monaco-editor {
-    @apply col-span-4;
+    @apply col-span-1 xxl:col-span-4;
     .editor {
         @apply w-full h-screen;
     }
